[package]
name = "chzzk-chat"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
futures = "0.3"
once_cell = "1.19"
dashmap = "6"
chrono = { version = "0.4", features = ["clock"] }
color-eyre = "0.6"
url = "2"
structopt = { version = "0.3.26" }